# ECE-517

hw3.2/linear_svm/: pyproject.toml
hw3.2/linear_svm/linear_svm/: main.py
hw5.2_5.3/regression/: pyproject.toml
hw5.2_5.3/regression/regression/: HW5_NUSVR.py  HW5_RIDGE.py  HW5_SVR.py  swetha.py
