[tool.poetry]
name = "linear-svm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "linear_svm"}]

[tool.poetry.scripts]
cluster = "linear_svm.main"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"